<resources>
    <string name="app_name">SSSQUICK</string>
    <string name="skip">SKIP</string>
    <string name="login_desc">Welcome To Sss Quick!</string>
    <string name="welcome">Welcome!</string>
    <string name="continue_login">Continue</string>
    <string name="Submit">Submit</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="mobile">Mobile Number</string>
    <string name="purchaseParty">Purchase Party: %1$s</string>
    <string name="billDate">Bill Date:</string>
    <string name="order_date_">Order Date: %1$s</string>
    <string name="mailDate">Mail Date: %1$s</string>
    <string name="orderNo">Order No: %1$s</string>
    <string name="purchaseBillNo">P.B.N: %1$s</string>
    <string name="saleParty">Sale Party: %1$s</string>
    <string name="netAmt">Net Amt: %1$s</string>

    <string name="view_all">view all</string>
    <string name="read_more">Read more</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_order">Add Order</string>
    <string name="pending_order">Pending Order</string>
    <string name="pending_order_marketer">Pending Order(Marketer)</string>
    <string name="pending_order_customer">Pending Order(Customer)</string>
    <string name="stock_in_office">Stock In Office</string>
    <string name="hold_order">Hold Order</string>
    <string name="goods_return">Goods Return</string>
    <string name="pending_lr">Pending LR</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="about_us">About us</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Confirm Logout</string>
    <string name="session_expired_title">Session Expired</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="you_have_been_logout_by_adm">You have been logout by Administrator.</string>
    <string name="logout_positive_btn">Yes, Logout!</string>
    <string name="logout_negative_btn">No, Cancel!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_mobile">Edit Mobile</string>
    <string name="something_went_wrong">Something went wrong, please try again after some time.</string>
    <string name="connection_timeout">Unable to process your request due to connection timeout. Please try again after sometime.</string>
    <string name="ok">OK</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="invalid_mobile_number">Invalid Mobile Number</string>
    <string name="order_in_office">Order In\nOffice</string>
    <string name="order_in_market">Order In\nMarket</string>
    <string name="with_customer">With\nCustomer</string>
    <string name="other">Other</string>
    <string name="remark">Remarks</string>

    <string name="search_by_name">Search</string>
    <string name="check_out">Check Out</string>
    <string name="update">Update</string>
    <string name="check_in">Check In</string>
    <string name="sorry">Sorry!</string>
    <string name="success">Success!</string>
    <string name="no_item_selected">No item selected!</string>
    <string name="_0">0</string>
    <string name="sale_party">Sale Party</string>
    <string name="sale_party_with_ast">Sale Party*</string>
    <string name="customer_code_">Customer Code*</string>
    <string name="order_in_market_msg">"Market/Customer/Others" type के साथ आप Order In Office पर checkin नहीं कर सकते हैं ।</string>
    <string name="order_in_office_msg">"Order In Office" के साथ आप Market, Customer &amp; Others पर checkin नहीं कर सकते हैं ।</string>
    <string name="avg_days">Average Days</string>
    <string name="avg_days_ats">Average Days*</string>
    <string name="avail_limit">Available Limit</string>
    <string name="avail_limit_ats">Available Limit*</string>
    <string name="marketer_code">Order No</string>
    <string name="serial_no">Serial No</string>
    <string name="sub_party">Sub Party</string>
    <string name="sub_party_ats">Sub Party*</string>
    <string name="sub_party_as_remark">Sub Party as Remark</string>
    <string name="transport">Transport</string>
    <string name="transport_ats">Transport*</string>
    <string name="scheme">Scheme</string>
    <string name="station">Booking Station</string>
    <string name="station_ats">Booking Station*</string>
    <string name="purchase_party">Purchase Party</string>
    <string name="purchase_party_ats">Purchase Party*</string>
    <string name="purchase_party_atss">Purchase Partynew*</string>
    <string name="nichkpurchase_party_ats">Nick Name Party</string>
    <string name="discription">Description</string>
    <string name="discription_ats">Description*</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="dispatch_date">Dispatch Date</string>
    <string name="dispatch_date_ats">Dispatch Date*</string>
    <string name="item">Item</string>
    <string name="item_ast">Item*</string>
    <string name="pack_type">Pack Type</string>
    <string name="pack_type_ast">Pack Type*</string>
    <string name="add_item">Add Item</string>
    <string name="qty">Qty</string>
    <string name="qty_ast">Qty*</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="amount_ast">Amount*</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_ast">Quantity*</string>
    <string name="nick_name">Nick Name</string>
    <string name="supplier">Supplier</string>
    <string name="add_pack_type">Add Pack Type</string>
    <string name="add_more">Add more</string>
    <string name="sale_bill_no_format">Sale BIll No. %1$s</string>
    <string name="order_no_format">Order No. %1$s</string>
    <string name="remark_">Remarks. %1$s</string>
    <string name="sale_party_format">Sale Party | %1$s</string>
    <string name="supplier_format">Supplier | %1$s</string>
    <string name="subparty_format">Sub Party | %1$s</string>
    <string name="amount_format">\u20B9 %1$s</string>
    <string name="sale_bill_no">Sale Bill No</string>
    <string name="sale_bill_date">Sale Bill Date</string>
    <string name="order_date">Order Date</string>
    <string name="order_no">Order No</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="add_images">Add Images</string>
    <string name="otp_has_been_sent_to_your_register_mobile_number_nplease_enter_the_otp">OTP has been sent to your register mobile number\nPlease enter the OTP</string>
    <string name="order_cancel">Order Cancel</string>
    <string name="status">Status</string>
    <string name="error">Error</string>
    <string name="save">Save</string>
    <string name="pvt_marka">PVT Marka*</string>
    <string name="dispatch_type">Dispatch Type*</string>
    <string name="sub_party_remark">Sub Party Remark*</string>
    <string name="RecordGR">Create GR</string>
    <string name="bility_courier_name">Bility/Courier Name</string>
    <string name="customer_code">Customer Code</string>
    <string name="customer_name">Customer Name</string>
    <string name="supplier_">Supplier*</string>
    <string name="parcel_qty">Parcel Qty*</string>
    <string name="transport_courier_name">Transport/Courier Name*</string>
    <string name="bility_courier_no">Bility/Courier No</string>
    <string name="upload">Upload</string>
    <string name="call">Call</string>
    <string name="party_type">Party Type</string>
    <string name="customer_fair_details">Customer fair details</string>
    <string name="total_count">Total</string>
    <string name="address_photo_visiting_card_carry_bag_hoarding">Address Photo (Visiting Card / Carry Bag / Hoarding)*</string>
    <string name="attach_order">Attach Order*</string>


    <!--<string name="regenerate_pdf"><u>Regenerate Pdf</u></string>-->
</resources>