<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSaleParty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/sale_party"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:text="Sale Party | OMM HOSIERY : MUZAFFARPUR"
        app:layout_constraintEnd_toStartOf="@id/imgGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgGo"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSaleParty"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/red" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSupplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/supplier_format"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/imgGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaleParty"
        tools:text="Supplier | DHARMENDRA TEXTILE GANDHI NAGAR" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSubparty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/noto_sans_light"
        android:text="@string/subparty_format"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/imgGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSupplier"
        tools:text="SubParty | DHARMENDRA TEXTILE GANDHI NAGAR" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOrderAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/noto_sans_regular"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubparty"
        tools:text="150000" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierChips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvOrderAmount" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierChips" />

</androidx.constraintlayout.widget.ConstraintLayout>