<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="TextSizeCheck,TextContrastCheck,TouchTargetSizeCheck">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.ssspvtltd.quick.widgets.AppToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationType="back"
            app:title="Check In &amp; Out" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/grey_200"
            app:layout_constraintBottom_toTopOf="@id/llBottom"
            app:layout_constraintEnd_toStartOf="@id/constraintRight"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/orderInOffice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ellipsize="end"
                android:fontFamily="@font/helvetica_regular"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:paddingVertical="7dp"
                android:paddingStart="5dp"
                android:paddingEnd="30dp"
                android:text="@string/order_in_office"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/orderInOfficeCount"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/orderInOffice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/orderInOffice" />

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderInOffice" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/orderInMarket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_200"
                android:ellipsize="end"
                android:fontFamily="@font/helvetica_regular"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:paddingVertical="7dp"
                android:paddingStart="5dp"
                android:paddingEnd="30dp"
                android:text="@string/order_in_market"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/orderInMarketCount"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/orderInMarket"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/orderInMarket" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderInMarket" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/withCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_200"
                android:ellipsize="end"
                android:fontFamily="@font/helvetica_regular"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:paddingVertical="7dp"
                android:paddingStart="5dp"
                android:paddingEnd="30dp"
                android:text="@string/with_customer"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/withCustomerCount"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/withCustomer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/withCustomer" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/withCustomer" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_200"
                android:ellipsize="end"
                android:fontFamily="@font/helvetica_regular"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:paddingVertical="7dp"
                android:paddingStart="5dp"
                android:paddingEnd="30dp"
                android:text="@string/other"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider3" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/other" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintRight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/llBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1.9"
            app:layout_constraintStart_toEndOf="@id/constraintLeft"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_bg"
                android:drawableStart="@drawable/search"
                android:drawablePadding="10dp"
                android:drawableTint="@color/red_200"
                android:fontFamily="@font/roboto_light"
                android:gravity="center|start"
                android:hint="@string/search_by_name"
                android:imeOptions="actionDone"
                android:padding="9dp"
                android:singleLine="true"
                android:textColor="#90000000"
                android:textColorHint="#90000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_below="@+id/etSearch"
                android:layout_marginTop="15dp"

                android:background="@color/white"
                android:paddingHorizontal="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSearch"
                tools:layoutManager="com.google.android.flexbox.FlexboxLayoutManager" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="etSearch,recyclerView"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="center"
                android:text="@string/remark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/etRemark"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="7dp"
                android:background="@drawable/edit_bg"
                android:gravity="start|top"
                android:maxLength="300"
                android:padding="7dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRemark" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="7dp"
                android:textColor="@color/red_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etRemark" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupRemark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tvRemark,etRemark"
                tools:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--<androidx.constraintlayout.widget.ConstraintLayout-->
        <!--    android:layout_width="match_parent"-->
        <!--    android:layout_height="wrap_content"-->
        <!--    app:layout_constraintTop_toBottomOf="@+id/constraintLeft">-->
        <!--    -->
        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/checkOut"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_effect_red"
                android:gravity="center"
                android:text="@string/check_out"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_effect_green"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <Button
                android:id="@+id/checkIn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_effect_green"
                android:gravity="center"
                android:text="@string/check_in"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="visible" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />


            <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/gray_300_bg"
                android:gravity="center"
                android:text="@string/edit_mobile"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
